--- a/style-dark.css
+++ b/style-dark.css
@@ -114,6 +114,10 @@ body {
   background-image: url("img/icon-css_dark.svg");
 }
 
+.skill-js {
+  background-image: url("img/icon-js_dark.svg");
+}
+
 .level {
   margin: 4px 0 16px;
   padding: 0;
