--- a/style-light.css
+++ b/style-light.css
@@ -118,6 +118,10 @@ body {
   background-image: url("img/icon-css_light.svg");
 }
 
+.skill-js {
+  background-image: url("img/icon-js_dark.svg");
+}
+
 .level {
   margin: 4px 0 16px;
   padding: 0;
