--- a/style-light.css
+++ b/style-light.css
@@ -119,7 +119,7 @@ body {
 }
 
 .skill-js {
-  background-image: url("img/icon-js_dark.svg");
+  background-image: url("img/icon-js_light.svg");
 }
 
 .level {
